--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    top: 0;
     height: 100%;
     position: relative;
     opacity: 0.92;
