--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,12 +1,16 @@
 // Home Content
 .splash {
   height: 99%;
+  -ms-transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   .splash-image {
     background-image: url("../assets/img/6057054938_d952659baa_o-medium.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    
     top: 0;
     height: 100%;
     position: relative;
