--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,7 +17,7 @@
 @border-real: @waterloo;
 
 @splash-bg-gradient: linear-gradient( rgba(@black, 1), rgba(@black, 0), rgba(@black, 0), rgba(@black, 0));
-@newsletter-bg-gradient: linear-gradient( rgba(@apple-gold, 1), rgba(@apple-tan, 0.75));
+@newsletter-bg-gradient: linear-gradient( rgba(@apple-yellow, 0.75), rgba(@apple-tan, 0.75));
 
 // Color Vars
 @apple-yellow: #ffec86;
