--- a/less/global.less
+++ b/less/global.less
@@ -9,10 +9,7 @@ html, body {
   color: @main-font-color;
 }
 
-h1, h2, h3, h4, h5 {
-  .font-title(400);
-  color: @header-font-color;
-}
+h1, h2, h3, h4, h5 { .font-title(400); }
 
 h1 { font-size: 3.6rem; }
 
