--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,56 +1,59 @@
 // Home Content
-.splash {
-  height: 99%;
-  -ms-transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  .splash-image {
-    background-image: url("../assets/img/6057054938_d952659baa_o-medium.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    
-    top: 0;
-    height: 100%;
-    position: relative;
-    opacity: 0.92;
-    filter: brightness(100%) contrast(90%);
-    .splash-overlay {
-      background: @splash-bg-gradient;
+.landing-page {
+  .splash {
+    height: 99%;
+    -ms-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    .splash-image {
+      background-image: url("../assets/img/6057054938_d952659baa_o-medium.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
       background-attachment: fixed;
+      
+      top: 0;
       height: 100%;
-    }
-  }
-  .tagline {
-    position: absolute;
-    left: 0;
-    top: 45%;
-    width: 100%;
-    text-align: center;
-    color: @apple-red;
-    
-    h2 {
-      background-color: @porcelain;
-      padding: 18px;
-      width: 33%;
-      margin: 0 auto;
-      .border-style;
-      .box-shadow(2px, 2px, 8px, rgba(0,0,0,0.75));
-      @media @phone {
-        width: 80%;
+      position: relative;
+      opacity: 0.92;
+      filter: brightness(100%) contrast(90%);
+      .splash-overlay {
+        background: @splash-bg-gradient;
+        background-attachment: fixed;
+        height: 100%;
       }
     }
-  }
-  .btn {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    .btn(@white; @apple-red; @white; @apple-red; 25%; 0px; 1.8rem);
-    .border-style;
-    z-index: 1;
+    .tagline {
+      position: absolute;
+      left: 0;
+      top: 45%;
+      width: 100%;
+      text-align: center;
+      color: @apple-red;
+      
+      h2 {
+        background-color: @porcelain;
+        padding: 18px;
+        width: 33%;
+        margin: 0 auto;
+        .border-style;
+        .box-shadow(2px, 2px, 8px, rgba(0,0,0,0.75));
+        @media @phone {
+          width: 80%;
+        }
+      }
+    }
+    .btn {
+      display: flex;
+      justify-content: center;
+      margin: 0 auto;
+      .btn(@white; @apple-red; @white; @apple-red; 25%; 0px; 1.8rem);
+      .border-style;
+      z-index: 1;
+    }
   }
 }
+
 
 section a.divider {
   display: grid;
@@ -146,7 +149,7 @@ section a.divider {
     background-color: @apple-yellow;
     color: @apple-tan;
     position: relative;
-    padding: 5% 0;
+    padding: 5% 0 0 0;
     z-index: 3;
     .box-shadow;
     p {
@@ -226,7 +229,7 @@ section a.divider {
 
 
   .contact {
-    background-color: @apple-green;
+    background-color: @apple-tan;
     color: @apple-gold;
     padding: 5% 15%;
     @media @phone {
