--- a/less/resetpassword.less
+++ b/less/resetpassword.less
@@ -1,11 +1,11 @@
-.sign-in-page { 
+.reset-password { 
   .splash {
     height: 99%;
     -ms-transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     .splash-image {
-      background-image: url("../assets/img/6082329903_ea18bfdc09_o-1600-medium.jpg");
+      background-image: url("../assets/img/121208-F-AX764-027-1600-medium.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -27,7 +27,7 @@
       width: 100%;
       text-align: center;
       color: @apple-red;
-      h3 { 
+      h3 {
         .font-shadow;
       }
       input[type=text] {
