--- a/less/navigation.less
+++ b/less/navigation.less
@@ -22,6 +22,9 @@ nav {
       text-decoration: none;
       color: @white;
       .font-shadow;
+      &:hover {
+        color: @white;
+      }
     }
   }
   ul {
