--- a/less/resetpassword.less
+++ b/less/resetpassword.less
@@ -77,7 +77,7 @@ section a.divider {
 }
 
 
-.sign-in {
+.reset-password-footer {
   display: block;
   max-width: unset;
   width: 100%;
@@ -132,20 +132,5 @@ section a.divider {
       }
     }
   }
-  
-    
-  
-  
-}   // home
-
-
-/* Add some padding and a grey background color to containers */
-
-/* Style the input elements and the submit button */
-
-
-/* Add margins to the checkbox */
-
-
-/* Style the submit button */
+}   
 
