--- a/less/global.less
+++ b/less/global.less
@@ -10,27 +10,35 @@ html, body {
 }
 
 h1, h2, h3, h4, h5 { .font-title(400); }
-
 h1 { font-size: 3.6rem; }
-
 h2 { font-size: 3.2rem; }
-
 h3 { font-size: 2.8rem; }
+li { font-size: 1.4rem; }
+a { 
+  text-decoration: none; 
+  &:hover {
+    color: initial;
+    text-decoration: none;
+  }
+}
+
 
 p {
   font-size: 1.6rem;
   line-height: 1.4;
 }
 
-li { font-size: 1.4rem; }
-
-.container {
+.container-basic {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
 }
 
+// 
+.italic { font-style: italic; }
 
+
+// Grid
 .grid-col-1 {
   display: grid;
   grid-template-columns: 100%;
@@ -57,6 +65,16 @@ li { font-size: 1.4rem; }
   max-width: 800px;
   margin: 0 auto;
 }
+.grid-col-5 {
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  // grid-gap: 10px; // This was causing horiz scrollbar issues
+  max-width: 800px;
+  margin: 0 auto;
+}
 
-a { text-decoration: none; }
+.centered {
+  float: none;
+  margin: 0 auto;
+}
 
