--- a/less/home-page.less
+++ b/less/home-page.less
@@ -278,20 +278,5 @@ section a.divider {
       }
     }
   }
-  
-    
-  
-  
-}   // home
-
-
-/* Add some padding and a grey background color to containers */
-
-/* Style the input elements and the submit button */
-
-
-/* Add margins to the checkbox */
-
-
-/* Style the submit button */
+}   
 
