--- a/less/home-page.less
+++ b/less/home-page.less
@@ -106,7 +106,7 @@ section a.divider {
         grid-template-columns: 100%;
         grid-gap: 10px 10px;
       }
-      .btn {
+      a {
         grid-column: span 2;
         display: flex;
         justify-content: center;
